crates/typestate-pipeline/tests/ui/stable/input_without_setter.stderr
error: `input = <Type>` is only valid alongside `setter = <fn>`
       = note: the transformer is what converts the input type to the field's storage type
       = help: add `setter = <fn>` (the fn that bridges `input → ty`) or remove `input`
 --> tests/ui/stable/input_without_setter.rs:9:23
  |
9 |     #[field(required, input = String)]
  |                       ^^^^^
